feat: add volume filter
